# CollepardoLab_Chromatin_Model

./: CMakeLists.txt  FindLAMMPS.cmake  README.md  README_new.md
cmake/: Findfmt.cmake
demo/: DNA_sequence.txt  in.run  nucl.txt
demo/demo_modified_neighbors/: log.lammps  log.nucl.txt
lammps_custom_src/: .Makefile.DNA_mpi.kate-swp  CMakeLists.txt  Makefile.DNA_mpi  bond_harmonic_DNA.cpp  bond_harmonic_DNA.h  chromatinplugin.cpp  fix_langevin.cpp  fix_langevin.h  hremd_steve.cpp  hremd_steve.h  neighbor.cpp  neighbor.h  pair_aniso.cpp  pair_aniso.h  pair_ljlambda.cpp  pair_ljlambda.h  temper_2.cpp  temper_2.h  temper_2_mod.cpp  temper_2_mod.h
lammps_custom_src/RIGID/: fix_rigid_nve_small.cpp  fix_rigid_small.h
main_simulations/input_scripts/chemically_specific_12N_165NRL_HREMD/: DNA_sequence.txt  NAFlex_params.txt  in.hremd_breathing  in.hremd_nonbreathing  nucl_b.txt  nucl_nonb.txt
main_simulations/input_scripts/minimal_coexistence/: DNA_sequence.txt  NAFlex_params.txt  in.run
